stylesheets.css
body{
margin: 0;
padding: 0;
border: 0;
overflow: hidden;
height: 100%; 
max-height: 100%; 
}

#framecontent{
	position: absolute;
	top: 0;
	bottom: 0; 
	left: 0;
	width: 200px; /*Width of frame div*/
	height: 100%;
	overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
	background: DimGray;
	color: white;
	text-align: right;
	font-family: "Lucida Console"
}

#portrait{
	height:auto;
	width:100%;
	opacity: 0;
	box-shadow: #000 0em 0em 0em;
	 /*will change on page load*/
}
.menu_name{
	font-size:40px;
}
.menu_items{
	font-size:20px;
	position: absolute;
	text-align: right; /*try left align as well*/
	top:30%;
	bottom:70%;
	right:5px;
}
.menu_items p{
	padding-top: 10px;
}
.menu_items p:hover{
	color: DarkOrange;
}

#maincontent{
position: fixed;
top: 0; 
left: 200px; /*Set left value to WidthOfFrameDiv*/
right: 0;
bottom: 0;
overflow: auto; 
background: #fff;
font-family: "Lucida Console"
}

div.img
{
	width: 200px;
	height: auto;
}

.innertube_menu{
	margin:5px;
}

.innertube{
margin: 15px; /*Margins for inner DIV inside each DIV (to provide padding)*/
}

* html body{ /*IE6 hack*/
padding: 0 0 0 200px; /*Set value to (0 0 0 WidthOfFrameDiv)*/
}

* html #maincontent{ /*IE6 hack*/
height: 100%; 
width: 100%; 
}

